Changes in beta release 2.3.10

* New options for the WindowList command: UseListSkip and OnlySkipList.

Changes in beta release 2.3.9 (October 1999)

* Color names from colorsets can be used in fvwm command ($[fg.cs<n>],
  $[bg.cs<n>], $[hilite.cs<n>] and $[shadow.cs<n>]).

* FvwmScript supports colorsets.

* FvwmTaskBar supports colorsets with the options Colorset, IconColorset and
  TipsColorset.

* New function variable $v.

* Menus can use colorsets with the new MenuStyle options MenuColorset,
  ActiveColorset and GreyedColorset.

Changes in beta release 2.3.8 (September 1999)

* New Style options ResizeOpaque and ResizeOutline.

* A long-awaited new default FvwmBanner logo.

* RaiseTransient no longer flips main above/below already raised transients.
  New style FlipTransient turns flipping back on, and additionally does a
  similar job for LowerTransient at the bottom of the layer.
  New style StackTransientParent augments Raise/LowerTransient.

* Icons have been removed from the fvwm package and are available at
  the fvwm web site.  (Temporarily only at "xxx.fvwm.org" instead of
  "www.fvwm.org".)

* New command BugOpts allows to enable various former bug fixing compile
  time options to be changed at run time.

* FvwmWharf and FvwmBacker support colorsets.

* A new special fvwm function StartFunction is introduced. It is supposed to
  be used to start modules and for other start commands. This function is
  executed before InitFunction and RestartFunction and anyone can take out
  a common part for both of these functions in favor of StartFunction.

Changes in beta release 2.3.7 (August 1999)

* FvwmButtons and FvwmIconBox support colorsets.

* The old Panels feature of FvwmButtons has been removed. A
  re-implementation has been written.

* The *FvwmButtonsButtonGeometry option makes sizing the
  individual buttons very easy.

* FvwmAnimate accepts "animate" commands from other modules or
  other sources of commands thru "sendtomodule".
