@@ -290,6 +290,11 @@ the mini window in the pager to give the real window the focus.
 Simply putting the pointer over the window inside the pager is
 enough.
 
+.IP "*FvwmPagerSolidSeparators"
+By default the pages of the virtual desktop are separated by
+dashed lines in the pager window.  This option causes FvwmPager to
+use solid lines instead.
+
 .IP "*FvwmPagerBalloons [\fItype\fP]"
 Show a balloon describing the window when the pointer is moved into
 a window in the pager. Currently only the window's icon name is shown.
